# seawatch_wind_lidar_buoy_reader

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: windspeed.yaml
seawatch_reader/: __init__.py
seawatch_reader/config/: windspeed.yaml
seawatch_reader/src/: batch.py  reader.py
src/: batch.py  helpers.py  reader.py
tests/: test_reader.py
tests/config/: config_givenposition.yaml  config_onevar.yaml  config_pattern_list.yaml  config_renameloc.yaml
tests/data/: MOCK-1_M01_WindSpeedDirectionTI.csv  MOCK-1_M02_WindSpeedDirectionTI.csv
