[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]

[project]
authors = [{name = "Hauke Schulz", email = "has@dmi.dk"}]
dependencies = [
  "xarray",
  "pandas",
  "numpy",
  "pyyaml"
]
description = "netCDF converter for SEAWATCH lidar buoy data"
dynamic = ["version"]
license = {text = "MIT"}
name = "seawatch_reader"
readme = "README.md"
requires-python = ">=3.9"

[project.entry-points.console_scripts]
seawatch_reader = "seawatch_reader.src.batch:main"

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
seawatch_reader = ["config/*.yaml"]

[tool.setuptools.packages.find]
include = ["seawatch_reader*", "seawatch_reader/config/*"]
